feat: enhance InstallmentItemDTO and Dashboard with recurring transaction support and optimize data fetching